@@ -276,7 +276,7 @@ public class RTMPHandler extends BaseRTMPHandler {
 											pc.setResult(getStatus(NC_CONNECT_SUCCESS));
 										}
 										// Measure initial roundtrip time after connecting
-										conn.getChannel((byte) 2).write(new Ping((short) 0, 0, -1));
+										conn.getChannel(2).write(new Ping((short) 0, 0, -1));
 										conn.startRoundTripMeasurement();
 									} else {
 										log.debug("connect failed");
